# max_os_rust

./: .gitignore  Cargo.toml  Readme.md  image.sh  limine.cfg  linker.ld  run.sh  x86_64-unknown-none.json
.cargo/: config.toml
src/: main.rs
src/cpu/: gdt.rs  idt.rs  mod.rs  serial.rs
