[package]
name = "max_os_rust"
version = "0.1.0"
authors = ["Maxlisui <maxlisui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uart_16550 = "0.2.0"
stivale = { path="../stivale-rs" }
spin = "0.5.2"
pic8259_simple = "0.2.0"

[dependencies.x86_64]
version = "0.13.2"
features = ["nightly", "instructions"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]